# CryptoKit

./: .gitignore  README.md  main.py  pyproject.toml
cryptokit/: __init__.py
cryptokit/application/: __init__.py
cryptokit/application/dto/: __init__.py  commands.py
cryptokit/application/use_cases/: __init__.py  crypto_use_cases.py
cryptokit/domain/: __init__.py
cryptokit/domain/asymmetric/: __init__.py  crypto.py
cryptokit/domain/encoding/: __init__.py  codec.py
cryptokit/domain/hash/: __init__.py  digests.py
cryptokit/domain/symmetric/: __init__.py  aes.py  rc6.py  sm4.py
cryptokit/infrastructure/: __init__.py
cryptokit/infrastructure/backends/: __init__.py
cryptokit/infrastructure/key_io/: __init__.py
cryptokit/infrastructure/random/: __init__.py
cryptokit/interfaces/: __init__.py
cryptokit/interfaces/api/: __init__.py
cryptokit/interfaces/cli/: __init__.py
cryptokit/shared/: __init__.py  errors.py  result.py  types.py
doc/: manual_test.md  todo.md  网络信息安全密码算法编程-期中作业-要求及评分细则.txt  项目设计计划.md
examples/: README.md
examples/third_party_clients/: README.md  asymmetric_client.py  encoding_client.py  hash_client.py  hmac_kdf_client.py  symmetric_client.py
tests/e2e/: test_cli_end_to_end.py  test_trace_mode.py
tests/integration/: test_api_cli_consistency.py  test_error_codes.py
tests/unit/: test_asymmetric.py  test_cli.py  test_encoding.py  test_hash.py  test_symmetric.py
